# keyreader

./: .eslintrc.cjs  .gitignore  README.md  buckets.json  index.html  package.json  vite.config.ts
.github/workflows/: publish.yml
assets/: index-0274b447.js  index-03ee6e7f.css  index-0705dcfa.js  index-1cc6d771.js  index-26ea9f2b.js  index-54c684b7.css  index-5a301a2c.css  index-61dade23.css  index-6d513625.js  index-6f631b15.js  index-a9d79ed2.js  index-dab240b8.js  index-e012151d.css  index-ec3b99b8.js
src/: App.tsx  Key.tsx  config.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keyboard_listener.rs  main.rs
